2010-02-16 JFL Peripheral Solutions jimw@jflinc.com

    * TwainApp.cpp, TwainApp.h, mfcDlgConfigure.cpp, & mfcDlgConfigure.h
        Save files to selected destination folder.

2010-02-05 JFL Peripheral Solutions jimw@jflinc.com

    * TwainApp.cpp, TwainApp.h, mfcDlgConfigure.cpp, mfcDlgConfigure.h, & mfcDlgMain.cpp
        Expand ExtImageInfo usability. 
        Make mfcDlgConfigure a child of TWAINApp.

2010-01-19 JFL Peripheral Solutions jimw@jflinc.com

    * mfcDlgConfigure.cpp, Fix issue if receive invalid container

2009-12-31 JFL Peripheral Solutions jimw@jflinc.com

    * TwainApp.cpp, TwainApp.h Fix MSGSET for default DS.

2009-12-27 JFL Peripheral Solutions mihailm

    * Correct Linux compatible
    * Add Multi-page TIFF just one file for all pages
    * Initialize capability containers 
    * Free some resources 
    * Added: MSVC 2008 solution
    * Fixed: compiler defines

2009-11-27 JFL Peripheral Solutions jimw@jflinc.com

    * Correct the name of the mcf classes to remove 32, from Cmfc32DlgConfigure
        to CmfcDlgConfigure
    * Identify capability as changed if number of items available change even
        if current is the same.
    * Highlight the column of the data that changed
    * Correct the name of the class to display Enumerations from CTW_Array_Dlg
        to CTW_Enum_Dlg
    * Add MessageBoxes to identify Message Set functionality that is missing
    * Move functionality to populate the items to display into the
        CTW_Enum_Dlg class
    
2009-11-25 JFL Peripheral Solutions jimw@jflinc.com

    * Use color on CListCtrl to show readonly and changed capabilities
    * Add open DS UIOnly

2009-11-25 JFL Peripheral Solutions jimw@jflinc.com

    * Fix FloatToFIX32 rounding error for negitive values
    * Change from GetArray to getItem for Array and Enumeration caps
    * update get_message to work with MSG_GET, MSG_GETCURRENT, MSG_GETDEFAULT Use 
        CListCtrl for listing capabilities
